[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Items/Fruits/Bananas.png" type="Texture" id=1]
[ext_resource path="res://hud/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/HUD.gd" type="Script" id=3]
[ext_resource path="res://hud/CharacterSelect.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Health" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 20 )

[node name="Lives" type="NinePatchRect" parent="Health"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 20 )
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Health/Lives"]
margin_left = 10.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "Lives Left: ?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="NinePatchRect" parent="Health"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 44.0
rect_min_size = Vector2( 115, 20 )
texture = SubResource( 2 )

[node name="Label" type="Label" parent="Health/Health"]
margin_left = 10.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "Health: ?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 10.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="VBoxContainer" parent="Scores"]
margin_right = 80.0
margin_bottom = 40.0

[node name="Bananas" type="NinePatchRect" parent="Scores/Score"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
texture = SubResource( 4 )

[node name="Banana" type="TextureRect" parent="Scores/Score/Bananas"]
margin_top = -6.0
margin_right = 30.0
margin_bottom = 23.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Scores/Score/Bananas"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[node name="CharacterSelect" parent="." instance=ExtResource( 4 )]
margin_top = -91.5
margin_bottom = 91.5

[node name="GameOver" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -37.5
margin_right = 75.0
margin_bottom = 37.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_left = 21.0
margin_right = 129.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 75 )

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
margin_right = 108.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "GAME OVER"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 34.0
margin_right = 108.0
margin_bottom = 54.0
text = "Click to Restart"

[connection signal="pressed" from="GameOver/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
